css/style.css
/* ... */
[class*="view-explore"] .views-view-grid .views-col,
[class*="view-explore"] .item-list li {
  background: #efefef;
  border: 1px solid #efefef;
  padding: 10px;
  /* margin-bottom: 10px; */
}
[class*="view-explore"] .views-view-grid .views-col:hover,
[class*="view-explore"] .views-view-grid .views-col:focus,
[class*="view-explore"] .item-list li:hover,
[class*="view-explore"] .item-list li:focus {
  background: #e5e5e5;
  border: 1px solid #efefef;
  padding: 10px;
  /* margin-bottom: 10px; */
}

/* Disable background color on specific pages */
.view-explore-no-background .views-view-grid .views-col,
.view-explore-no-background .item-list li {
  background: none;
  border: none;
  padding: 10px;
}

.view-explore-no-background .views-view-grid .views-col:hover,
.view-explore-no-background .item-list li:hover,
.view-explore-no-background .views-view-grid .views-col:focus,
.view-explore-no-background .item-list li:focus {
  background: none;
  border: none;
  padding: 10px;
}

.table.table-striped thead.thead-map th {
  background-color: #212529;
  color: white;
  font-weight: bold;
}

#edit-spammaster-signature {
  display: none !important;
}

/* Wider main content containers on large displays. */
@media only screen and (min-width: 1400px) {
  #main.container,
  #header .container,
  .highlighted .container,
  .featured-bottom .container {
    max-width: 1600px;
  }
}

@media only screen and (min-width: 1600px) {
  #main.container,
  #header .container,
  .highlighted .container,
  .featured-bottom .container {
    max-width: 1760px;
  }
}

@media only screen and (min-width: 1900px) {
  #main.container,
  #header .container,
  .highlighted .container,
  .featured-bottom .container {
    max-width: 1840px;
  }
}

/* Media players should scale with the wider content area. */
.node--type-islandora-object audio,
.node--type-islandora-object video {
  width: 100%;
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
}

.view-collection-search
.node--view-mode-collection-search {
  text-align: center;
}

.view-collection-search
.field--name-field-media-image {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 180px;
  margin-bottom: .75rem;
}

.view-collection-search
.field--name-field-media-image img {
  display: block;
  max-width: 100%;
  height: auto;
}

.view-collection-search .views-col {
  padding-bottom: 1.5rem;
}

.view-collection-search,
.view-members {
  text-align: center;
}

.view-collection-search .field--name-field-media-image,
.view-members .field--name-field-media-image {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 180px;
  margin-bottom: .75rem;
}

.view-collection-search .field--name-field-media-image img,
.view-members .field--name-field-media-image img {
  display: block;
  max-width: 100%;
  height: auto;
}

.view-collection-search .views-col,
.view-members .views-col {
  padding-bottom: 1.5rem;
}

